Fixing alignment;

--- a/src/less/dropdown/base/dropdown.less
+++ b/src/less/dropdown/base/dropdown.less
@@ -8,13 +8,6 @@
     position: relative;
 }
 
-span.menu,
-span.fake-menu,
-span.listbox,
-span.combobox {
-    display: inline-block;
-}
-
 // BEM elements
 
 .menu button.expand-btn--borderless,
